themes/src/Fluent.css
/* ... */
.theme-dark .tabBar__0b563,
.theme-dark .tabBar_b9fccc,
.theme-dark .tabBar_d6f9e9,
.theme-dark .settingsTabBar_dc2e0e,
.theme-dark .tabBar__4efb4,
.theme-dark .top_b3f026 {
  border-bottom: 0;
}
.theme-dark .tabBar__0b563 .item_b3f026,
.theme-dark .tabBar_b9fccc .item_b3f026,
.theme-dark .tabBar_d6f9e9 .item_b3f026,
.theme-dark .settingsTabBar_dc2e0e .item_b3f026,
.theme-dark .tabBar__4efb4 .item_b3f026,
.theme-dark .top_b3f026 .item_b3f026 {
  font-feature-settings: "rclt" 0;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
  color: #FFF;
  border: 0;
}
.theme-dark .tabBar__0b563 .item_b3f026:hover,
.theme-dark .tabBar_b9fccc .item_b3f026:hover,
.theme-dark .tabBar_d6f9e9 .item_b3f026:hover,
.theme-dark .settingsTabBar_dc2e0e .item_b3f026:hover,
.theme-dark .tabBar__4efb4 .item_b3f026:hover,
.theme-dark .top_b3f026 .item_b3f026:hover {
  color: rgba(255, 255, 255, 0.786);
}
.theme-dark .tabBar__0b563 .item_b3f026.selected_b3f026,
.theme-dark .tabBar_b9fccc .item_b3f026.selected_b3f026,
.theme-dark .tabBar_d6f9e9 .item_b3f026.selected_b3f026,
.theme-dark .settingsTabBar_dc2e0e .item_b3f026.selected_b3f026,
.theme-dark .tabBar__4efb4 .item_b3f026.selected_b3f026,
.theme-dark .top_b3f026 .item_b3f026.selected_b3f026 {
  border: 0;
}
.theme-dark .tabBar__0b563 .item_b3f026.selected_b3f026::before,
.theme-dark .tabBar_b9fccc .item_b3f026.selected_b3f026::before,
.theme-dark .tabBar_d6f9e9 .item_b3f026.selected_b3f026::before,
.theme-dark .settingsTabBar_dc2e0e .item_b3f026.selected_b3f026::before,
.theme-dark .tabBar__4efb4 .item_b3f026.selected_b3f026::before,
.theme-dark .top_b3f026 .item_b3f026.selected_b3f026::before {
  content: "";
  width: 16px;
  height: 3px;
  position: absolute;
  bottom: 0;
  left: calc(50% - 8px);
  background-color: hsl(var(--fluent-accent-hue-sat), calc(var(--fluent-accent-lightness) + 25%));
  border-radius: 999px;
}
.theme-dark .tabBar__0b563 .item_b3f026.selected_b3f026::after,
.theme-dark .tabBar_b9fccc .item_b3f026.selected_b3f026::after,
.theme-dark .tabBar_d6f9e9 .item_b3f026.selected_b3f026::after,
.theme-dark .settingsTabBar_dc2e0e .item_b3f026.selected_b3f026::after,
.theme-dark .tabBar__4efb4 .item_b3f026.selected_b3f026::after,
.theme-dark .top_b3f026 .item_b3f026.selected_b3f026::after {
  display: none;
}
.theme-dark .tabBar__0b563 .item_b3f026 .textBadge_f05120,
.theme-dark .tabBar_b9fccc .item_b3f026 .textBadge_f05120,
.theme-dark .tabBar_d6f9e9 .item_b3f026 .textBadge_f05120,
.theme-dark .settingsTabBar_dc2e0e .item_b3f026 .textBadge_f05120,
.theme-dark .tabBar__4efb4 .item_b3f026 .textBadge_f05120,
.theme-dark .top_b3f026 .item_b3f026 .textBadge_f05120 {
  background-color: #2E2E2E !important;
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
}

.botTagRegular__82f07 {
  background-color: #2E2E2E;
  text-transform: none;
}
.botTagRegular__82f07 .botText__82f07 {
  font-weight: normal;
  text-transform: lowercase;
}
.botTagRegular__82f07 .botText__82f07::first-letter {
  text-transform: uppercase;
}

.botTagOP_e48ddb {
  color: rgba(255, 255, 255, 0.786);
}

.theme-dark .sidebar_c48ade,
.theme-dark .container__2637a {
  background-color: transparent;
}
.theme-dark .layer__960e4,
.theme-dark .standardSidebarView__23e6b,
.theme-dark .sidebarRegionScroller__23e6b,
.theme-dark .contentRegion__23e6b,
.theme-dark .contentRegionScroller__23e6b {
  background: transparent;
}
.theme-dark .bg__960e4 {
  margin-top: -10px;
  background: var(--fluent-acrylic-background);
  background-size: cover;
  filter: saturate(var(--fluent-acrylic-background-saturate)) blur(var(--fluent-acrylic-background-blur));
}
.theme-dark .bg__960e4::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  background: linear-gradient(0deg, rgba(32, 32, 32, var(--fluent-acrylic-background-dimness)), rgba(32, 32, 32, var(--fluent-acrylic-background-dimness))), rgba(32, 32, 32, var(--fluent-acrylic-background-dimness));
  background-blend-mode: color, luminosity;
}

.theme-dark .button__201d5 {
  border-radius: 4px;
  font-feature-settings: "rclt" 0;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
}
.theme-dark .button__201d5.sizeMin__201d5, .theme-dark .button__201d5.sizeSmall__201d5, .theme-dark .button__201d5.sizeMedium__201d5, .theme-dark .button__201d5.sizeLarge__201d5, .theme-dark .button__201d5.sizeXlarge__6885c {
  background-color: hsl(var(--fluent-accent-hue-sat), calc(var(--fluent-accent-lightness) + 20%));
  color: rgba(var(--fluent-text-on-accent-color), 100%);
}
.theme-dark .button__201d5.sizeMin__201d5:hover, .theme-dark .button__201d5.sizeSmall__201d5:hover, .theme-dark .button__201d5.sizeMedium__201d5:hover, .theme-dark .button__201d5.sizeLarge__201d5:hover, .theme-dark .button__201d5.sizeXlarge__6885c:hover {
  background-color: hsl(var(--fluent-accent-hue-sat), calc(var(--fluent-accent-lightness) + 10%));
}
.theme-dark .vc-ranb-button.button__201d5.lookBlank__201d5.sizeMin__201d5.grow__201d5{
  padding: 0;
  margin: 0 5px;
  color: #000;
}
.theme-dark .button__201d5.lookFilled__201d5.colorBrand__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorGreen__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorBrandNew__8872c {
  background-color: hsl(var(--fluent-accent-hue-sat), calc(var(--fluent-accent-lightness) + 20%));
  border-width: 1px;
  border-style: inset;
  border-color: rgba(255, 255, 255, 0.08) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
  color: rgba(var(--fluent-text-on-accent-color), 100%);
}
.theme-dark .button__201d5.lookFilled__201d5.colorBrand__201d5:hover, .theme-dark .button__201d5.lookFilled__201d5.colorGreen__201d5:hover, .theme-dark .button__201d5.lookFilled__201d5.colorBrandNew__8872c:hover {
  background-color: hsl(var(--fluent-accent-hue-sat), calc(var(--fluent-accent-lightness) + 25%));
}
/* ... */

